@@ -5,6 +5,8 @@ date Version 3.00.26 (Beta 3)
 * Fixed FS#137 — "Allow -1 for the 'size' property if the minimum/maximum size is set."
 * Fixed FS#113 — "Error when undoing cutting controls."
 * Fixed FS#97 — "Menu items in XRC preview window involve wxFB functionality"
+^ Implemented FS#117 — "ESC should close the XRC preview form."
+   Note: This will never work on wxGTK because it does not set key events to frames or dialogs.
 
 02-28-2007 Version 3.00.25 (Beta 3)
 * Fixed FS#100 — "Problem with the relative path of XPM"
